--- a/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/VideoStoryBoard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1256,7 +1256,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VwX-oj-bgV">
                                         <rect key="frame" x="2" y="1.3333333333333286" width="35" height="35"/>
-                                        <color key="backgroundColor" red="0.054901960780000002" green="0.70196078429999997" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" name="FF8319"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="35" id="3f1-0r-Z0Y"/>
                                             <constraint firstAttribute="height" constant="35" id="B8v-Ye-XT8"/>
@@ -1365,7 +1365,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.36862745099999999" green="0.81568627449999997" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" name="FF8319"/>
                                                 <constraints>
                                                     <constraint firstItem="n5b-1b-YYr" firstAttribute="centerY" secondItem="CBu-04-fNB" secondAttribute="centerY" id="7W7-dD-hHg"/>
                                                     <constraint firstItem="zeT-tG-O1e" firstAttribute="top" secondItem="CBu-04-fNB" secondAttribute="top" id="HTg-f0-atx"/>
@@ -1395,7 +1395,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.36862745099999999" green="0.81568627449999997" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" name="FF8319"/>
                                                 <constraints>
                                                     <constraint firstItem="jGg-oN-npE" firstAttribute="centerX" secondItem="ch2-Zo-1NF" secondAttribute="centerX" constant="-20" id="KA8-Nk-pxI"/>
                                                     <constraint firstAttribute="bottom" secondItem="FSX-G7-Zgw" secondAttribute="bottom" id="Pz9-ts-HJR"/>
@@ -1641,7 +1641,7 @@
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPe-it-P8L">
                                                 <rect key="frame" x="333" y="23.666666666666629" width="50" height="50"/>
-                                                <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" name="FF8319"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Hpr-II-HNz"/>
                                                     <constraint firstAttribute="width" constant="50" id="NcI-PJ-cRi"/>
@@ -1932,7 +1932,7 @@
                                                                                                     </label>
                                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R0Q-Kv-Qtf">
                                                                                                         <rect key="frame" x="10" y="113" width="246" height="36"/>
-                                                                                                        <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                        <color key="backgroundColor" name="FF8319"/>
                                                                                                         <constraints>
                                                                                                             <constraint firstAttribute="height" constant="36" id="8As-ju-p6N"/>
                                                                                                         </constraints>
@@ -2323,7 +2323,7 @@
                                                                                                     </label>
                                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DMV-fw-si3">
                                                                                                         <rect key="frame" x="10" y="77" width="222" height="36"/>
-                                                                                                        <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                        <color key="backgroundColor" name="FF8319"/>
                                                                                                         <constraints>
                                                                                                             <constraint firstAttribute="height" constant="36" id="OKk-cZ-xpk"/>
                                                                                                         </constraints>
@@ -2458,7 +2458,7 @@
                                                         </textField>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="olV-Bm-K7O">
                                                             <rect key="frame" x="290" y="668.66666666666663" width="93" height="44"/>
-                                                            <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" name="FF8319"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="44" id="KcE-nk-APB"/>
                                                                 <constraint firstAttribute="width" constant="93" id="xxH-ue-w72"/>
@@ -2690,6 +2690,11 @@
             <point key="canvasLocation" x="3558" y="-1482"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="U0P-hs-p4S">
+            <size key="intrinsicContentSize" width="120" height="20"/>
+        </designable>
+    </designables>
     <resources>
         <image name="arrow" width="5.3909997940063477" height="9.0819997787475586"/>
         <image name="arrow.left" catalog="system" width="128" height="95"/>
@@ -2720,10 +2725,10 @@
         <image name="switchCamera" width="24" height="24"/>
         <image name="video.fill" catalog="system" width="128" height="81"/>
         <namedColor name="FF8319">
-            <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99215686274509807" green="0.65098039215686276" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="headercolor">
-            <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99215686274509807" green="0.65098039215686276" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
