--- a/Bazaar Ghar/StoryBoards/Base.lproj/Main.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N9Q-my-JxT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N9Q-my-JxT">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -2349,7 +2349,7 @@
                                                                                                             </label>
                                                                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igx-PB-Q8i">
                                                                                                                 <rect key="frame" x="60" y="2.6666666666666643" width="30" height="30"/>
-                                                                                                                <color key="backgroundColor" red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                                <color key="backgroundColor" name="FF8319"/>
                                                                                                                 <constraints>
                                                                                                                     <constraint firstAttribute="height" constant="30" id="KCh-ns-42r"/>
                                                                                                                     <constraint firstAttribute="width" constant="30" id="vxd-Jv-eOt"/>
@@ -2609,7 +2609,7 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rr4-dD-mzh">
                                                 <rect key="frame" x="15" y="0.0" width="345" height="45"/>
-                                                <color key="backgroundColor" red="0.023529411760000001" green="0.71764705880000002" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" name="FF8319"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Checkout">
@@ -3541,7 +3541,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="b01-QW-Zvw"/>
-                        <color key="backgroundColor" red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="FF8319"/>
                         <constraints>
                             <constraint firstItem="1vL-xc-MlP" firstAttribute="leading" secondItem="b01-QW-Zvw" secondAttribute="leading" id="2l6-Rf-B6X"/>
                             <constraint firstItem="1vL-xc-MlP" firstAttribute="top" secondItem="b01-QW-Zvw" secondAttribute="top" id="Cl4-Bd-SHd"/>
@@ -5258,6 +5258,9 @@
             <point key="canvasLocation" x="-7858.3999999999996" y="279.31034482758622"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="94d-mJ-0AP"/>
+    </designables>
     <resources>
         <image name="17" width="225" height="225"/>
         <image name="5" width="720" height="405"/>
@@ -5291,13 +5294,13 @@
         <image name="trash" catalog="system" width="117" height="128"/>
         <image name="whatsapp 1" width="63" height="63"/>
         <namedColor name="FF8319">
-            <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99215686274509807" green="0.65098039215686276" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="backgroundcolor">
             <color red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="headercolor">
-            <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99215686274509807" green="0.65098039215686276" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="pickcolor">
             <color red="0.96862745098039216" green="0.93725490196078431" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
